# NativeFaceDetector

./: .gitignore  README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/yar/nativefacedetector/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/yar/nativefacedetector/: DetectionBasedTracker.java  FaceCamActivity.java
app/src/main/jni/: DetectionBasedTracker_jni.cpp  DetectionBasedTracker_jni.h
app/src/main/res/layout/: activity_face_cam.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/yar/nativefacedetector/: ExampleUnitTest.java
